[mod] reforged project doc and MatLab
Doc:
- renamed files to english names
- mod some content

MatLab:
- add values for material constants

--- a/ProjectReport/LaTeX/Literature.bib
+++ b/ProjectReport/LaTeX/Literature.bib
@@ -2,9 +2,16 @@
   title={Numerical Simulation of Radio Frequency
 Ablation with State Dependent Material
 Parameters in Three Space Dimensions},
-  author={Kröger et. al., Tim},
+  author={Tim Kröger et. al.},
   year={2006},
   publisher={Springer}
+}
+
+@book{cplusplus,
+  title={C++ Succinctly},
+  author={Michael McLaughlin},
+  year={2012},
+  publisher={Syncfusion Inc.}
 }
 
 @book{zitat1,
