--- a/ProjectReport/LaTeX/Main.tex
+++ b/ProjectReport/LaTeX/Main.tex
@@ -30,9 +30,40 @@
 \clearpage
 
 
-%% Teil 1, Einleitung 
+% part 1, Introduction 
 
 \section{Introduction}
+
+\textcolor{blue}{Lets talk about:\\
+- Medical Treatment of Tumor\\
+- Radio frequency ablation\\
+- This project in General\\
+- Motivation
+}
+
+% part 2, Main
+
+\section{Computer-aided simulation of radio frequency ablation with finite elements}
+
+\textcolor{blue}
+{
+This is the main part
+}
+
+
+% part 3, Summary
+
+\section{Summary and Outlook}
+
+\textcolor{blue}
+{
+This is the conclusion part
+}
+
+\newpage
+
+
+\section{Style Test}
 
 \subsection{foo}
 
@@ -55,9 +86,11 @@
 \nocite{*}
 \printbibliography
 
+\newpage
+
 %% Letzter Teil, Anhang
 \appendix
 
-%\input{Anhang} % Wird gerade nicht gebraucht
+\input{Appendix} 
 
 \end{document} 
