--- a/ProjectReport/LaTeX/Praeambel.tex
+++ b/ProjectReport/LaTeX/Praeambel.tex
@@ -1,4 +1,4 @@
-%!TeX root=Anwendungsprojekt.tex
+%!TeX root=Main.tex
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -51,7 +51,7 @@
 
 % Literaturverzeichnis mitt BibLaTeX und Biber erstellen
 \usepackage[style=numeric, sorting=none, backend=biber]{biblatex}
-\addbibresource{Literatur.bib}
+\addbibresource{Literature.bib}
 
 
 
