--- a/ProjectReport/LaTeX/Appendix.tex
+++ b/ProjectReport/LaTeX/Appendix.tex
@@ -20,7 +20,7 @@
 #include <stdio.h>
 int main() {
   int i;
-  for (i = 1; i < 11; i++)
+  for (i = 1; i < 11; ++i)
   {
     printf("%d ", i);
   }
