Updated structure in report and added some literature references

--- a/ProjectReport/LaTeX/Literature.bib
+++ b/ProjectReport/LaTeX/Literature.bib
@@ -14,6 +14,20 @@ Parameters in Three Space Dimensions},
   publisher={Syncfusion Inc.}
 }
 
+@book{knothe,
+  title={Finite Elemente, Eine Einführung für Ingenieure, 5. Auflage},
+  author={Klaus Knothe u. Heribert Wessels},
+  year={2017},
+  publisher={Springer Vieweg}
+}
+
+@book{sorger,
+  title={Generierung von Netzen für Finite Elemente hoher Ordnung in zwei und drei Raumdimensionen},
+  author={Christian G. Sorger},
+  year={2012},
+  publisher={Technische Universität München, Lehrstuhl für Computation in Engineering}
+}
+
 @book{zitat1,
   title={Richard Feynman},
   publisher={The Character of Physical Law, 1965},
