Updated book reference

--- a/ProjectReport/LaTeX/Literature.bib
+++ b/ProjectReport/LaTeX/Literature.bib
@@ -1,3 +1,4 @@
+
 @book{kroeger,
   title={Numerical Simulation of Radio Frequency
 Ablation with State Dependent Material
@@ -7,13 +8,6 @@ Parameters in Three Space Dimensions},
   publisher={Springer}
 }
 
-@book{cplusplus,
-  title={C++ Succinctly},
-  author={Michael McLaughlin},
-  year={2012},
-  publisher={Syncfusion Inc.}
-}
-
 @book{knothe,
   title={Finite Elemente, Eine Einführung für Ingenieure, 5. Auflage},
   author={Klaus Knothe u. Heribert Wessels},
@@ -21,11 +15,87 @@ Parameters in Three Space Dimensions},
   publisher={Springer Vieweg}
 }
 
+@book{jung,
+  title={Methode der finiten Elemente für Ingenieure, Eine Einführung in die numerischen Grundlagen und Computersimulation, 2. Auflage},
+  author={Michael Jung u. Ulrich Langer},
+  year={2013},
+  publisher={Springer Vieweg}
+}
+
+@book{giorges,
+  title={Finite Element and Finite Difference Methods for Elliptic and Parabolic Differential Equations},
+  author={Aklilu T. G. Giorges},
+  year={2016},
+  publisher={InTech}
+}
+@book{loustau,
+  title={Numerical Differential Equations, Theory and Technique, ODE Methods, Finite Differences, Finite Elements and Collocation},
+  author={John Loustau},
+  year={2016},
+  publisher={World Scientific}
+}
+
+%@book{juelich,
+%  title={Partielle Differentialgleichungen, Numerik und Anwendungen, Konferenzen Band 18},
+%  author={Arndt Bode et. al.},
+%  year={1996},
+%  publisher={Forschungszentrum Jülich GmbH}
+%}
+
+@book{munz,
+  title={Numerische Behandlung gewöhnlicher und partieller Differenzialgleichungen, Ein anwendungsorientiertes Lehrbuch für Ingenieure, 4. Auflage},
+  author={Claus-Dieter Munz},
+  year={2019},
+  publisher={Springer Vieweg}
+}
+
+@book{hengguang,
+  title={Finite element analysis for the axisymmetric Laplace operator on polygonal domains, Journal of Computational and Applied Mathematics},
+  author={Hengguang Li},
+  year={2011},
+  publisher = {Elsevier}
+}
+
+@book{agbezuge,
+  title={Transient Heat Transfer in a Partially Cooled Cylindrical Rod, Transactions of the ASME Vol. 131},
+  auhor={Lawrence Agbezuge},
+  year={2009},
+  publisher={ASME Digital Collection}
+}
+
 @book{sorger,
   title={Generierung von Netzen für Finite Elemente hoher Ordnung in zwei und drei Raumdimensionen},
   author={Christian G. Sorger},
   year={2012},
   publisher={Technische Universität München, Lehrstuhl für Computation in Engineering}
+}
+
+@book{pietruszka,
+  title={MATLAB und Simulink in der Ingenieurpraxis, Modellbildung, Berechnung und Simulation, 4. Auflage},
+  author={Wolf Dieter Pietruszka},
+  year={2014},
+  publisher={Springer Vieweg}
+}
+
+@book{heiderich,
+  title={Technische Probleme lösen mit C/C++, Von der Analysis bis zur Dokumentation, 4. Auflage},
+  author={Norbert Heiderich},
+  year={2020},
+  publisher={Hanser}
+}
+
+@book{cplusplus,
+  title={C++ Succinctly},
+  author={Michael McLaughlin},
+  year={2012},
+  publisher={Syncfusion Inc.}
+}
+
+@book{cppSTL,
+  title={Die C++ Standardbibliothek, Einführung und Nachschlagewerk, 4. Auflage},
+  author={Stefan Kuhlins},
+  year={2005},
+  publisher={Springer}
 }
 
 @book{zitat1,
