Added more literature for finite elements in Matlab

--- a/ProjectReport/LaTeX/Literature.bib
+++ b/ProjectReport/LaTeX/Literature.bib
@@ -1,8 +1,6 @@
 
 @book{kroeger,
-  title={Numerical Simulation of Radio Frequency
-Ablation with State Dependent Material
-Parameters in Three Space Dimensions},
+  title={Numerical Simulation of Radio Frequency Ablation with State Dependent Material Parameters in Three Space Dimensions},
   author={Tim Kröger et. al.},
   year={2006},
   publisher={Springer}
@@ -35,12 +33,12 @@ Parameters in Three Space Dimensions},
   publisher={World Scientific}
 }
 
-%@book{juelich,
-%  title={Partielle Differentialgleichungen, Numerik und Anwendungen, Konferenzen Band 18},
-%  author={Arndt Bode et. al.},
-%  year={1996},
-%  publisher={Forschungszentrum Jülich GmbH}
-%}
+@book{juelich,
+  title={Partielle Differentialgleichungen, Numerik und Anwendungen, Konferenzen Band 18},
+  author={Arndt Bode et. al.},
+  year={1996},
+  publisher={Forschungszentrum Jülich GmbH}
+}
 
 @book{munz,
   title={Numerische Behandlung gewöhnlicher und partieller Differenzialgleichungen, Ein anwendungsorientiertes Lehrbuch für Ingenieure, 4. Auflage},
@@ -75,6 +73,20 @@ Parameters in Three Space Dimensions},
   author={Wolf Dieter Pietruszka},
   year={2014},
   publisher={Springer Vieweg}
+}
+
+@book{jichun,
+  title={Computational Partial Differential Equations Using MATLAB},
+  author={Jichun Li},
+  year={2009},
+  publisher={CRC Press}
+}
+
+@book{kattan,
+  title={MATLAB Guide to Finite Elements, An Interactive Approach},
+  author={P.I. Kattan},
+  year={2003},
+  publisher={Springer}
 }
 
 @book{heiderich,
