Added reference to books of Stein and Watanabe

--- a/ProjectReport/LaTeX/Literature.bib
+++ b/ProjectReport/LaTeX/Literature.bib
@@ -6,6 +6,21 @@
   publisher={Springer}
 }
 
+@book{watanabe,
+  title={Temperature Dependence of Thermal Conductivity of Liver Based on Various Experiments and a Numerical Simulation for RF Ablation},
+  author={Hiroki Watanabe et. al.},
+  year={2010},
+  publisher={IEEE EMBS 2010 : 32nd Annual International Conference of the IEEE Engineering in Medicine and Biology Society}
+}
+
+@book{stein,
+  title={Untersuchungen zur Dosimetrie der hochfrequenzstrominduzierten interstitiellen Thermotherapie
+in bipolarer Technik},
+  author={Thomas Stein},
+  year={1999},
+  publisher={Institut für Med./Techn. Physik und Lasermedizin der Freien Universität Berlin}
+}
+
 @book{knothe,
   title={Finite Elemente, Eine Einführung für Ingenieure, 5. Auflage},
   author={Klaus Knothe u. Heribert Wessels},
