--- a/ProjectReport/LaTeX/Main.tex
+++ b/ProjectReport/LaTeX/Main.tex
@@ -26,26 +26,32 @@
 
 \clearpage
 
-\listoffigures
-\listoftables
-\lstlistoflistings
-\clearpage
+% \listoffigures
+% \listoftables
+% \lstlistoflistings
+% \clearpage
 
 
 % part 1, Introduction 
 
 \section{Introduction to radio frequency ablation}
-
 Lets talk about:\\
 - Medical Treatment of Tumor\\
 - Radio frequency ablation\\
 - Why RFA Simulation is important \\
-- Motivation \\
-- This project in General\\
+- {Motivation / This project in General}\\
+
 
 % part 2, Main
 
 \section{Computer-aided simulation of radio frequency ablation}
+
+\subsection{Discrete Numerical Simulation}
+- In real world physics models are often bounded by reality \\
+- Geometrical boundary conditions are often vague \\
+- In most cases there is no reasonable analytical approach to solve these problems \\
+- Modern numerical approaches are very flexible in this regard \\
+- Simulations done right can be easily modified and adapted to different models and boundaries \\
 
 \subsection{About Errors in simulations and numerical approaches}
 - see TUM dissertation \\
@@ -57,7 +63,35 @@ Lets talk about:\\
 - It's basically a butterfly effect \\
 - Optimizing one error source often conflicts with another one -> e.g. handling nonlinearity can cause fatal numerical errors (at least that's what Kroeger said ...)
 
+
 \subsection{The physics behind radio frequency ablation}
+- Generating electrical energy with a generator \\
+- Generated heat is distributed on the tissue \\
+- Temperature rises do to constant electrical energy input \\
+- Interesting is: - Temperature distribution over time \\
+- What else? TODO \\
+- Electrical energy can be approximated by the potential of the electrodes on the probes \\
+
+\begin{equation}
+    \varphi: TODO 
+\end{equation}
+
+\begin{equation}
+    Electrical Energy: TODO
+\end{equation}
+
+- No energy is lost \\
+- Electrical Energy becomes heat energy by Tissue resistance \\
+- Heat Energy is distributed by heat equation \\
+
+\begin{equation}
+    Heat equation : TODO 
+\end{equation}
+
+- Discretization of the equation in space and time domain \\
+- Time can be modeled continuously or in discrete intervalls \\
+- Discrete intervalls are is typically more practical in modeling but less efficient or exact \\
+- Discrete intervalls can be refined if necessary \\
 
 \section{Mathematical aspects of discrete simulation}
 
@@ -69,28 +103,44 @@ Lets talk about:\\
 - build up system of PDE's to describe problem \\
 - Using the cylindric domain, different domains \\
 
-\subsubsection{FEM for electrical fields}
+\subsubsection{Parabolic problems}
+- Solving systems of ODE over discrete time intervalls
+
+\subsubsection{FEM in Electrostatics}
 - special domain \\
 - boundary conditions \\
 
-\subsubsection{FEM for temperature fields}
+\subsubsection{FEM in Temperature Fields / perhaps Fluid Dynamics}
 - boundary condition (heat source or sink) \\
 
-
-\subsection{Solving systems of ODE over time}
-- This is for temperature distribution
+\subsection{Numerical solution of system of ODE's}
 
 \subsection{Axial symmetrie}
 - Using axial symmetrie to simplify computations \\
 - reducing one dimension 3D -> 2D \\
+- problems are qsuivalent \\
 - significant savings calculations time and complexity \\
 - approach: fourier decomposition in angular direction to reduce dependency on the angular $\varphi$ \\
 - using static models, only dependency on space \\
 - maybe Torus elements \\
 
 
+
+
+\section{Discretization of PDEs}
+
+\subsection{Computational Domain}
+- Using one needle, whole geometry domain is axis symmetric around one needle \\
+- Problem can be reduced to 2D problem using ring elements and cylindric coordinates \\
+- Eliminate dependency on angular $\phi$ from the calculations \\
+- For visualisation, symmetric results can be reconstructed to 3D \\
+- Whole calculation will be in cylindric coordinates \\
+
 \subsection{FEM in cylindric Coordinates}
 - Rewrite the equations to cylindric coordinates \\
+- Calculations are made on a cross-section with angular phi = 0 \\
+- Define boundaries -> new artificial boundary around the rotation axis to be taken into consideration \\
+- Explain how the new boundary can be treated \\
  
 Laplace in cartesian coordinates:
 \begin{equation}
@@ -102,6 +152,8 @@ Laplace in cylindric coordinates:
     \Delta := \frac{\partial^2}{\partial r^2} + \frac{1}{r} \frac{\partial}{\partial r} + \frac{1}{r^2} \frac{\partial^2}{\partial \phi^2} + \frac{\partial^2}{\partial z^2}
 \end{equation}
 
+TODO : Write something \\
+
 Laplace in polar coordinates:
 \begin{equation}
     \Delta := \frac{\partial^2}{\partial r^2} + \frac{1}{r} \frac{\partial}{\partial r} + \frac{1}{r^2} \frac{\partial^2}{\partial \phi^2}
@@ -109,16 +161,14 @@ Laplace in polar coordinates:
 
 
 
-\section{Discretization of PDEs}
-
 \subsection{PDE for Electric potential}
 
 \subsubsection{Weak formulation of the problem}
-Three parts are interesting:
+4 areas can be distinguished from a mathematical point of view \\
 - Inner domain \\
 - Fixed Potential of electrodes \\
-- Inner domain \\
-- Outer boundary -> Robin \\
+- Outer boundaries with no fixed potential -> Robin \\
+- Rotation axis, artificial boundary -> Neumann \\
 
 Constant material parameters: \\
 
@@ -145,20 +195,23 @@ Constant material parameters: \\
     - \Delta \varphi(r,\phi,z) = - \frac{1}{r} \frac{\partial \varphi}{\partial r} - \frac{\partial^2 \varphi}{\partial r^2} - \frac{1}{r^2} \frac{\partial^2 \varphi}{\partial \phi^2} -      \frac{\partial^2 \varphi}{\partial z^2}  = 0
 \end{equation}
 
-- Since the domain has axis symmetry, the solution for $\varphi$ is independant from the angular $\phi$ \\
-- So equation simplifies to
+- Since the domain has axis symmetry, the solution for $\varphi$ is independent from the angular $\phi$ \\
+- So equation simplifies to 
 
 \begin{equation}
     - \frac{1}{r} \frac{\partial \varphi}{\partial r} - \frac{\partial^2 \varphi}{\partial r^2} - \frac{\partial^2 \varphi}{\partial z^2} = 0
 \end{equation}
 
-- PDE is now parabolic and no longer elliptic \\
-- We will care about a more complex formulation later 
-
 
 \subsubsection{Electrodes}
 
-- $\phi$ = $\pm$ 1
+- Potential difference on the electrodes is fixed bx definition \\
+- For calculations, potential will be defined as $\pm 1$ \\
+
+\begin{equation}
+    \varphi = \pm 1
+\end{equation}
+
 
 \subsubsection{Outer boundary}
 
@@ -173,11 +226,27 @@ Constant material parameters: \\
     TODO
 \end{equation}
 
+\subsubsection{Rotation axis}
+
+- Axis symmetry, so here apply natural neumann bundary conditions TODO \\
+
+
+\subsection{Calculation of electrical energy}
+
+- $\varphi$ can be calculated on every discrete point \\
+- Calculate power for every point \\
+- Tissue Resistance \\
+- Effective power \\
+- Calculate electric energy from electric power \\
+
+
+
+
 \subsection{PDE for temperature Distribution}
 
 \subsubsection{Weak formulation}
 
-Following Kroeger, the temperature distribution is modeled by the heat equation: 
+From physics above, the temperature distribution is modeled by the heat equation: 
 
 \begin{equation}
     \partial_t (\rho c T) - \nabla \cdot (\lambda \nabla T) = Q
@@ -207,7 +276,18 @@ For the first run, we assume $lambda$ is also constant too, which greatly reduce
 
 \textcolor{red}{TODO: explain Q her}
 
-$Q = Q_(rf) + Q_{perf}$
+\begin{equation}
+    Q_{total} = Q_{rf} + Q_{perf}
+\end{equation}
+
+- $Q_{rf}$ is descripted above \\
+- $Q_{perf}$ is blood perfusion \\
+- TODO: Maybe explain this in the physics above??? \\
+
+
+
+
+
 
 \section{Applied FEM technologies}
 
@@ -271,6 +351,8 @@ Adapted for the temperature distribution, assuming $\lambda$ and all material pa
     a_w(t;u,v) := \int_{\Omega} \rho c (\partial_t u \cdot v) drdz + \int_{\Omega} \lambda (\partial_r u \partial_r v + \partial_z u \partial_z v) r drdz = \int_{\Omega} f v r dr dz
 \end{equation}
 
+\newpage
+
 \subsection{Discretization / Triangulation}
 
 \subsubsection{Grid generation}
@@ -288,11 +370,15 @@ Adapted for the temperature distribution, assuming $\lambda$ and all material pa
 \subsubsection{L2-Norm}
 \subsubsection{Evtl energy norm}
 
+\newpage
+
+
 \section{Numerical challenges / Numerical aspects in general}
-\subsubsection{Numerical integration}
-\subsubsection{Numerical gradient on discrete points}
-\subsubsection{Surface integral}
-\subsubsection{Solving the system of equations}
+\subsection{Numerical integration}
+\subsection{Numerical gradient on discrete points}
+\subsection{Surface integral}
+\subsection{Grid refinement}
+\subsection{Solving the system of equations}
 
 \section{Applied simulation}
 \subsection{Generating TestData / Get reference data}
@@ -306,9 +392,21 @@ Adapted for the temperature distribution, assuming $\lambda$ and all material pa
 
 \subsection{Performance Optimization}
 \subsection{MatLab vs C++}
-- Basically the performance advantages of using C++ \\
-- Combine advantages if both languages \\
-- MatLab as documentation of the simulation \\
+- Could have done the whole simulation using only MATLAB \\
+- MATLAB is a scripting language that calls Fortran Subroutines, which are highly efficient in calculating problems of linear algebra \\
+- However, MATLAB has to call these subroutines in an efficient way to take these performance advantages \\
+- It is extremely easy to write bad and inperformant code in MATLAB, if it is used in the wrong way \\
+- Efficient implementation required hardcoding routines and is very stiff \\ 
+- To me it was important to write flexible code, that can be easily adapted and extended to try out different modification \\
+- This is way easier when using loops and subroutines instead of hard coded implementations, also the code because way more easier to read and fix \\
+- So I was going for a combined implementation of MatLab and C++ \\ 
+- When using flexible code design, C++ allows performance advantages in using loops etc over MATLAB \\
+- However, MATLAB allows easy function hadnling, what makes the algorithms more accessable for the reader \\ 
+- In the end I combined the advantages of both languages \\
+- MatLab serves as frame for the pre- and postprocessing, like grid generation and graphical output of the numerical results. \\
+- Also the scripts serve as a mathematical documentation of the whole simulation for the reader \\
+- Computation intense subroutines are done in C++ \\
+
 
 \subsection{Graphical output}
 
@@ -317,15 +415,33 @@ Adapted for the temperature distribution, assuming $\lambda$ and all material pa
 \section{Summary and Outlook}
 
 \subsection{Project Summary}
+- One could argue that writing a simulation from scratch is a waste of time \\
+- There are many highly useful numerical software solutions for numerical simulation and numerical problems \\
+- Usually there is no need to write an own detailed implementation \\
+- Creating own scripts and implementations helps to understand numerical problems and error sources \\
+- This approach helps enormously to increase the ability to use these software products effectively and to generate better simulations and is mandatory to improve \\
+- There can also be no software developer without understanding how a computer works numbers \\
 
 \subsubsection{strengths and flaws}
 - why is it good, why is it bad
+- good: numerical results do match the general expectation \\
+- bad: model is to simplified to represent real world conditions \\
+
 \subsubsection{future modifications}
+- Material parameters are dependent on Temperature and potential -> \\
+- Using variable instead of fixed material parameters \\
+- Take the evaporation of water into account \\ 
+- Different types of perfusion \\
+- Defining more realistic and complex boundary conditions \\
+- Perhaps a second needle in a 3D simulation \\
 
 \subsection{State of the current Research}
 - Research in the simulation of medical therapy methods \\
+- 
+
 
 \subsection{Other FEM projects and software}
+
 - FENICS \\
 - COMSOL \\
 - ANSYS \\
